fixed issue of not showing when deployed

--- a/src/components/Styles/header.module.css
+++ b/src/components/Styles/header.module.css
@@ -6,6 +6,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 300px;
 }
 
 * {
