--- a/src/components/Styles/input.css
+++ b/src/components/Styles/input.css
@@ -1,6 +1,13 @@
 input {
-    width: 180px;
-    height: 30px;
-    margin-left: 10px;
+    width: 90%;
+    height: 40px;
     margin-top: 10px;
+    padding-left: 1em;
+}
+
+@media (max-width:768px) {
+    input {
+        width: 95%;
+        height: 30px;
+    }
 }
