--- a/src/components/Styles/movies.module.css
+++ b/src/components/Styles/movies.module.css
@@ -1,12 +1,111 @@
-.section {
-    display: grid;
-    grid-template-columns: 15% 35% 35% 15%;
-    height: 450px;
-}
-
-.flex2 {
-    display: flex;
-    justify-content: space-evenly;
-    position: relative;
-    top: 30px;
-}
+        .section {
+            display: grid;
+            grid-template-columns: 20% 30% 30% 20%;
+            min-width: 300px;
+            max-width: 100%;
+        }
+        
+        .section>div {
+            margin: 0 1em;
+        }
+        
+        .flex2 {
+            display: flex;
+            justify-content: space-evenly;
+            position: relative;
+            top: 30px;
+            margin: 0 1em;
+            gap: 1em;
+            flex-direction: column;
+        }
+        
+        .message {
+            display: flex;
+            justify-content: center;
+            position: relative;
+            top: 30px;
+            margin: 0 1em;
+        }
+        
+        .flex2>img {
+            width: 100%;
+            height: 400px;
+        }
+        
+        .flex2>div>p {
+            padding-bottom: .2em;
+        }
+        
+        .flex2>div {
+            padding-bottom: 2em;
+        }
+        
+        @media (max-width:768px) {
+            .section {
+                grid-template-columns: 1fr 1fr;
+                row-gap: 1em;
+            }
+            .flex2 {
+                align-items: center;
+                margin: 0 1em;
+                height: max-content;
+            }
+            body {
+                overflow: scroll;
+            }
+            .flex2>div,
+            .flex2>img {
+                margin-bottom: 1em;
+            }
+            .flex2>div {
+                margin-bottom: 0em;
+            }
+            .flex2>div>p {
+                padding-bottom: .5em;
+                width: 90%;
+            }
+            /* .section>div:last-child {
+        order: 3;
+    }
+    .section>div:nth-of-type(3) {
+        order: 4;
+    } */
+            .section>div:nth-of-type(2) {
+                order: 3;
+            }
+            .section>div:nth-of-type(3) {
+                order: 4;
+            }
+        }
+        
+        @media (max-width:400px) {
+            .section {
+                grid-template-columns: 1fr;
+                row-gap: 1em;
+                column-gap: 1em;
+            }
+            .flex2 {
+                align-items: center;
+                margin: 0 1em;
+            }
+            body {
+                overflow: scroll;
+            }
+            .flex2>div,
+            .flex2>img {
+                margin-bottom: 1em;
+            }
+            .flex2>div {
+                margin-bottom: 0em;
+            }
+            .flex2>div>p {
+                padding-bottom: .5em;
+                width: 90%;
+            }
+            .section>div:last-child {
+                order: 3;
+            }
+            .section>div:nth-of-type(3) {
+                order: 4;
+            }
+        }
